:rocket: Add GameTablesHandler for player and team tables method calls :bug: Fix all founded bugs